[package]
name = "siwe-oidc"
version = "0.1.0"
edition = "2021"
authors = ["Spruce Systems, Inc."]
license = "MIT OR Apache-2.0"
repository = "https://github.com/spruceid/siwe-oidc/"
description = "OpenID Connect Identity Provider for Sign-In with Ethereum."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.53"
headers = "0.3.6"
hex = "0.4.3"
iri-string = { version = "0.6", features = ["serde"] }
# openidconnect = "2.1.2"
openidconnect = { git = "https://github.com/sbihel/openidconnect-rs", branch = "replace-ring", default-features = false, features = ["reqwest", "rustls-tls"] }
rand = "0.8.4"
rsa = { version = "0.7.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.78"
siwe = "0.5.0"
thiserror = "1.0.30"
tracing = "0.1.30"
url = { version = "2.2", features = ["serde"] }
urlencoding = "2.1.0"
sha2 = "0.10.0"
cookie = "0.16.0"
bincode = "1.3.3"
async-trait = "0.1.52"
ethers-core = "1.0.2"
ethers-providers = "1.0.2"
lazy_static = "1.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { version = "0.4.3", features = ["headers"] }
# axum-debug = "0.3.2"
chrono = "0.4.19"
figment = { version = "0.10.6", features = ["toml", "env"] }
tokio = { version = "1.14.0", features = ["full"] }
tower-http = { version = "0.2.0", features = ["fs", "trace", "cors"] }
tracing-subscriber = { version = "0.3.2", features = ["env-filter"] }
bb8-redis = "0.10.1"
uuid = { version = "0.8", features = ["serde", "v4"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# cached = { version = "0.26", default-features = false }
chrono = { version = "0.4.19", features = ["wasmbind"] }
console_error_panic_hook = { version = "0.1" }
# console_log = "0.2"
getrandom = { version = "0.2", features = ["js"] }
# log = "0.4"
matchit = "0.4.2"
serde_urlencoded = "0.7.0"
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }
wee_alloc = { version = "0.4" }
worker = "0.0.9"

[profile.release]
opt-level = "z"
lto = true

[dev-dependencies]
env_logger = "0.10.0"
test-log = "0.2.11"
tokio = { version = "1.14.0", features = ["macros", "rt"] }

# [target.'cfg(target_arch = "wasm32")'.profile.release]
# opt-level = "z"

# [target.'cfg(target_arch = "wasm32")'.profile.debug]
# opt-level = "z"
# lto = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-g', '-O']
